made a quick correction to my jupyter notebook

--- a/employee.ipynb
+++ b/employee.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -100,20 +100,20 @@
        "4   10005  78228.0"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#load the salaries table\n",
-    "salaries_df = pd.read_sql_table('salaries', engine)\n",
+    "salaries_df = pd.read_sql_table('salaries', conn)\n",
     "salaries_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -210,20 +210,20 @@
        "4  282238        e0003 1952-10-28  Abdelkader    Baumann   F 1991-01-18"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#load the employee table\n",
-    "employee_df = pd.read_sql_table('employees', engine)\n",
+    "employee_df = pd.read_sql_table('employees', conn)\n",
     "employee_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "4   10005  78228.0        s0001 1955-01-21    Kyoichi  Maliniak   M 1989-09-12"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "Text(0.5, 0, 'salary')"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        "4      e0002            Engineer"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,13 +459,13 @@
     "#load the title table\n",
     "#check for null values using .isnull\n",
     "#title_df.isnull().sum()\n",
-    "title_df = pd.read_sql_table('titles', engine)\n",
+    "title_df = pd.read_sql_table('titles', conn)\n",
     "title_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
        "4 1985-02-18    e0003  Senior Engineer  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
        "6    Technique Leader  48582.896092"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
        "(array([0, 1, 2, 3, 4, 5, 6]), <a list of 7 Text xticklabel objects>)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
