update code to hide my postgresql username and password as a key

--- a/employee.ipynb
+++ b/employee.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sqlalchemy import create_engine\n",
+    "from database_key import db_key\n",
     "\n",
     "#from sqlalchemy.ext.declarative import declarative_base\n",
     "#Base = declarative_base()\n"
@@ -18,22 +19,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#find the path for the database\n",
     "\n",
     "#create engine using sqlalchemy\n",
-    "engine = create_engine('postgresql://postgres:postgres@localhost:5432/Employee_db')\n",
-    "\n",
+    "engine = create_engine('postgresql://' + db_key + '@localhost:5432/Employee_db')\n",
+    "#Can also be done this way \n",
+    "engine = create_engine('postgresql://'postgres:postgres'@localhost:5432/Employee_db')\n",
     "#connect to the engine\n",
     "conn = engine.connect()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +102,7 @@
        "4   10005  78228.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +212,7 @@
        "4  282238        e0003 1952-10-28  Abdelkader    Baumann   F 1991-01-18"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +328,7 @@
        "4   10005  78228.0        s0001 1955-01-21    Kyoichi  Maliniak   M 1989-09-12"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +359,7 @@
        "Text(0.5, 0, 'salary')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -383,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +452,7 @@
        "4      e0002            Engineer"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +589,7 @@
        "4 1985-02-18    e0003  Senior Engineer  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +681,7 @@
        "6    Technique Leader  48582.896092"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +713,7 @@
        "(array([0, 1, 2, 3, 4, 5, 6]), <a list of 7 Text xticklabel objects>)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -732,6 +734,13 @@
     "ax = sns.barplot(x='title', y='salary',data=avg_new_df)\n",
     "plt.xticks(rotation=90)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
