update my code to hid my pastgresql username and password as a key

--- a/employee.ipynb
+++ b/employee.ipynb
@@ -28,7 +28,8 @@
     "#create engine using sqlalchemy\n",
     "engine = create_engine('postgresql://' + db_key + '@localhost:5432/Employee_db')\n",
     "#Can also be done this way \n",
-    "engine = create_engine('postgresql://'postgres:postgres'@localhost:5432/Employee_db')\n",
+    "#engine = create_engine('postgresql://'postgres:postgres'@localhost:5432/Employee_db')\n",
+    "\n",
     "#connect to the engine\n",
     "conn = engine.connect()\n"
    ]
